--- a/src/css-tooltip.css
+++ b/src/css-tooltip.css
@@ -1,4 +1,5 @@
 [data-tooltip] {
+
     --bg-color : #eee;
     --fg-color : #333;
 
@@ -15,25 +16,33 @@
         opacity: 0;
         transition: opacity .35s ease .25s;
     }
+
+    /* Body */
     &:after {
         content: attr(data-tooltip);
-        bottom: 100%;
         background: var(--bg-color);
         color: var(--fg-color);
         padding: 12px;
-        border-radius: 4px;
-        width: 240px;
-        font-size: 14px;
+        bottom: 100%;
+        /* border-radius: 4px; */
+        /* width: 240px; */
+        /* font-size: 14px;
         font-weight: 400;
-        line-height: 1.5;
+        line-height: 1.5; */
+        white-space: nowrap;
     }
+
+    /* Arrow */
     &:before {
         content: '';
         background: transparent;
         border: 8px solid transparent;
         border-top-color: var(--bg-color);
     }
+
     &:hover, &:focus, &:active {
-        &:after, &:before { opacity: 1 }
+        &:after, &:before {
+            opacity: 1
+        }
     }
 }
