--- a/src/css-tooltip.scss
+++ b/src/css-tooltip.scss
@@ -1,7 +1,11 @@
-[data-tooltip] {
+$background-color : rgba(0, 0, 0, .75);
+$foreground-color : #fff;
+$arrow-size : 8px;
+$vertical-shift : 12px;
+$multiline-width : 240px;
+$tooltip-padding: 12px;
 
-    --bg-color : #222;
-    --fg-color : #eee;
+[data-tooltip] {
 
     position: relative;
     display: inline-block;
@@ -9,7 +13,7 @@
     &:after, &:before {
         position: absolute;
         left: 50%;
-        transform: translate(-50%, -12px);
+        transform: translate(-50%, -$vertical-shift);
         z-index: 1000;
         pointer-events: none;
         user-select: none;
@@ -20,9 +24,9 @@
     // Tooltip Body
     &:after {
         content: attr(data-tooltip);
-        background: var(--bg-color);
-        color: var(--fg-color);
-        padding: 1rem;
+        background: $background-color;
+        color: $foreground-color;
+        padding: $tooltip-padding;
         white-space: nowrap;
         bottom: 100%;
     }
@@ -31,8 +35,8 @@
     &:before {
         content: '';
         background: transparent;
-        border: 8px solid transparent;
-        border-top-color: var(--bg-color);
+        border: $arrow-size solid transparent;
+        border-top-color: $background-color;
     }
 
     // Active state
@@ -47,8 +51,8 @@
     // Multi-line tooltip (.tooltip-multiline)
     &.tooltip-multiline {
         &:after {
-            width: 100%;
-            max-width: 320px;
+            width: 100vw;
+            max-width: $multiline-width;
             white-space: normal;
         }
     }
@@ -56,36 +60,36 @@
     // ----------
     // Bottom tooltip (.tooltip-bottom, *-left, *-right )
     &[class*="tooltip-bottom"] {
-        &:after, &:before { transform: translate(-50%, 12px) }
+        &:after, &:before { transform: translate(-50%, $vertical-shift) }
         &:after {
             bottom: auto;
             top: 100%;
         }
         &:before {
             bottom: 0;
-            border: 8px solid transparent;
-            border-bottom-color: var(--bg-color);
+            border: $arrow-size solid transparent;
+            border-bottom-color: $background-color;
         }
     }
     &.tooltip-bottom-left:after {
-        transform: translate(-24px, 12px);
+        transform: translate(-($arrow-size*3), $vertical-shift);
     }
     &.tooltip-bottom-right:after {
         left: auto;
         right: 50%;
-        transform: translate(24px, 12px);
+        transform: translate($arrow-size*3, $vertical-shift);
     }
 
     // ----------
     // Top tooltip (.tooltip-top, *-left, *-right )
     // .tooltip-top not needed (default style)
     &.tooltip-top-left:after {
-        transform: translate(-24px, -12px);
+        transform: translate(-($arrow-size*3), -$vertical-shift);
     }
     &.tooltip-top-right:after {
         left: auto;
         right: 50%;
-        transform: translate(24px, -12px);
+        transform: translate( $arrow-size*3, -$vertical-shift);
     }
     // End extra styles
     // ----------------------------------------------------
