--- a/docs/style.css
+++ b/docs/style.css
@@ -1,7 +1,7 @@
 body {
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Droid Sans", "Helvetica Neue", Arial, sans-serif;
     font-size: 1rem;
-    font-weight: 500;
+    font-weight: 400;
     line-height: 1.6;
     width: 90%;
     max-width: 42rem;
@@ -9,8 +9,17 @@ body {
 }
 h1 {
     font-size: 150%;
+    font-weight: 700;
+    border-bottom: solid #ddd 1px;
+}
+h2 {
+    font-size: 120%;
     font-weight: 500;
     border-bottom: solid #ddd 1px;
+}
+a {
+    color: #069;
+    font-weight: 500;
 }
 [data-tooltip]{ border-bottom: dotted #999 1px }
 [data-tooltip]:before {
