--- a/docs/style.css
+++ b/docs/style.css
@@ -1,10 +1,11 @@
 body {
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Droid Sans", "Helvetica Neue", Arial, sans-serif;
-    font-size: 1rem;
+    font-size: .9rem;
     font-weight: 400;
+    color: #444;
     line-height: 1.6;
     width: 90%;
-    max-width: 42rem;
+    max-width: 38rem;
     margin: 3rem auto;
 }
 h1 {
@@ -16,12 +17,29 @@ h2 {
     font-size: 120%;
     font-weight: 500;
     border-bottom: solid #ddd 1px;
+    margin-top: 2rem;
 }
 a {
-    color: #069;
+    color: #399;
     font-weight: 500;
+    text-decoration: none;
 }
-[data-tooltip]{ border-bottom: dotted #999 1px }
+pre, code {
+    font-family : "Andale Mono", "Monaco", "Lucida Console", "Menlo", "Consolas", "Roboto Mono", "Liberation Mono", monospace;
+    background: #cff;
+}
+code {
+    padding: 3px 5px;
+    font-size: 80%;
+}
+hr {
+    margin: 2rem 0;
+    background: transparent;
+    border: none;
+    border-bottom: solid #ddd 1px;
+}
+
+[data-tooltip]{ border-bottom: solid #9ff 2px }
 [data-tooltip]:before {
     font-weight: 300;
     font-size: 80%;
